More organization of obj_model and api_obj_model objects
