# docs/tms_openapi.yml
@@ -148,7 +148,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ListResourceProvidersResponse'
+                type: array
+                uniqueItems: true
+                items:
+                  $ref: '#/components/schemas/ResourceProvider'
 
   "/resources/providers/links":
     get:
@@ -164,7 +167,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GetLinkedResourceProviderResponse'
+                type: array
+                uniqueItems: true
+                items:
+                  $ref: '#/components/schemas/ResourceAccountLink'
 
   "/resources/providers/links/{resource_provider_link_id}":
     delete:
@@ -188,7 +194,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UnlinkResourceProviderResponse'
+                $ref: '#/components/schemas/ResourceAccountLogin'
 
   "/resources/providers/authorize":
     get:
@@ -377,34 +383,6 @@ components:
           items:
             $ref: '#/components/schemas/Resource'
 
-    ListResourceProvidersResponse:
-      type: object
-      properties:
-        status:
-          type: string
-        result:
-          type: array
-          items:
-            $ref: '#/components/schemas/IdentityProvider'
-
-    GetLinkedResourceProviderResponse:
-      type: object
-      properties:
-        status:
-          type: string
-        result:
-          type: array
-          items:
-            $ref: '#/components/schemas/ResourceProviderLink'
-
-    UnlinkResourceProviderResponse:
-      type: object
-      properties:
-        status:
-          type: string
-        result:
-          $ref: '#/components/schemas/ResourceProviderLogins'
-
     TmsCallbackResponse:
       type: object
       properties:
@@ -433,7 +411,25 @@ components:
         updated:
           type: string
 
-    ResourceProviderLink:
+    ResourceProvider:
+      type: object
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        clientId:
+          type: string
+        oauth2TokenUrl:
+          type: string
+        userInfoUrl:
+          type: string
+        created:
+          type: string
+        updated:
+          type: string
+
+    ResourceAccountLink:
       type: object
       properties:
         tms_identity:
@@ -453,7 +449,7 @@ components:
         enabled:
           type: boolean
 
-    ResourceProviderLogins:
+    ResourceAccountLogin:
       type: object
       properties:
         tms_identity:
